// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem should render 1`] = `
<div
  className="root"
  onClick={[Function]}
/>
`;

exports[`GridItem should render CROSS 1`] = `
<div
  className="cross root"
  onClick={[Function]}
>
  X
</div>
`;

exports[`GridItem should render NAUGHT 1`] = `
<div
  className="naught root"
  onClick={[Function]}
>
  0
</div>
`;
